<resources>
    <string name="app_name">ثبت شرکت ایلیا</string>
    <string name="SignUp">ورود به برنامه</string>
    <string name="numberHint">09*********</string>
    <string name="signInCode">کد ثبت نام</string>
    <string name="SignIn">ورود</string>
    <string name="PleasEnterTheCode">لطفا کد ارسال شده را وارد کنید</string>
    <string name="EnterTheCode">کد را وارد نمایید</string>
    <string name="CompleteProfile">تکمیل اطلاعات</string>
    <string name="OnlineChat">چت آنلاین</string>
    <string name="contactUs">تماس با ما</string>
    <string name="EnterMobileNumber">شماره موبایل خود را وارد نمایید</string>
    <string name="registeredbefore">قبلا ثبت نام کرده ام</string>
    <string name="yourc">کارشناس شما</string>
    <string name="title_activity_send">SendActivity</string>




</resources>
