<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
	tools:context=".MainActivity">


    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/completeprofile"
               android:contentDescription="@string/CompleteProfile"/>


    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"

                android:orientation="horizontal"        >
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_chat"
                    android:layout_weight="1"
                    android:contentDescription="@string/OnlineChat"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_call"
                    android:layout_weight="1"
                    android:contentDescription="@string/contactUs"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"        >
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_senddocs"
                    android:layout_weight="1"
                    android:contentDescription="@string/OnlineChat"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_qa"
                    android:layout_weight="1"
                    android:contentDescription="تماس با ما"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>